--- a/index.html
+++ b/index.html
@@ -58,6 +58,46 @@
 
 图片式
 <iframe height='176' width='760' frameborder='no' scrolling='no' src= 'http://dx.84lm.net/code/adview_pic.php?r=1&c=7&w=760&h=176&b=0080ff&s=CC0000&bg=FFFFFF&p=808080&u=46914&at=p0&tt=t1'></iframe> 
-  </body>
+
+
+方框广告
+<script id="MLFK" src='http://ad.mililm.net/code/adbox/cpcbox.php?u=117082'></script>
+
+对联广告
+<script src='http://ad.mililm.net/code/duilian.php?u=117082'></script>
+
+GIF动图
+<iframe height='135' width='980' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/zb_ad.php?&size=1&b=D6D6D6&k=ED240E&zi=C90000&u=117082'></iframe>
+
+<iframe height='135' width='980' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/dt_ad.php?&size=1&b=D6D6D6&k=ED240E&zi=C90000&u=117082'></iframe>
+
+
+翻页大图
+<iframe height='300' width='980' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/Ncode20161123.php?&size=1&b=1&zi=2d374b&u=117082'></iframe>
+
+经典图文
+<iframe height='125' width='835' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/adview_pic6.php?r=1&c=7&w=835&h=125&b=0080ff&s=004080&bg=FFFFFF&p=808080&u=117082&at=p0&tt=t1'></iframe>
+
+热点导航
+<iframe height='130' width='980' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/go_nav.php?u=117082'></iframe>
+
+底部通栏
+<script src='http://ad.mililm.net/code/adview_db.php?u=117082'></script>
+
+彩色字块
+<iframe height='175' width='950' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/color_caik.php?&size=5&pp=0&u=117082'></iframe>
+
+
+文字样式
+<iframe height='80' width='950' frameborder='no' scrolling='no' src= 'http://ad.mililm.net/code/adview_pic_title.php?r=2&c=7&w=950&h=80&b=CCCCCC&s=CC0000&bg=FFFFFF&p=808080&u=117082&at=p2&tt=t1'></iframe>
+
+下角广告
+<script src='http://ad.mililm.net/code/adview_yx.php?uw=0&uis=1&sf=1&u=117082'></script>
+
+
+移动广告
+<script id="138wap_ad" src='http://wap.138lm.com/code/mobile/wap_cpc.php?uw=0&u=117082'></script>    
+    
+    </body>
 
 </html>
